<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="xyz.thetechninja.barcodeessential.SupportedTypes">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:src="@drawable/ic_home50"
            android:contentDescription="@string/ndn"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/supported_barcode_types"
            android:textSize="20sp"
            android:textColor="#000"
            android:fontFamily="sans-serif-light"
            android:textAlignment="center"
            android:layout_marginBottom="20dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.2dp"
            android:background="@android:color/darker_gray"
            android:layout_marginBottom="15dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_point"
            android:drawableStart="@drawable/ic_point"
            android:fontFamily="sans-serif"
            android:text="@string/qr_code"
            android:drawablePadding="8dp"
            android:paddingLeft="20dp"
            android:paddingStart="20dp"
            android:textColor="#000"
            android:textSize="12sp"
            android:layout_marginBottom="15dp"
            android:gravity="center_vertical"
            tools:ignore="RtlSymmetry" />
        <View

            android:layout_width="match_parent"
            android:layout_height="0.2dp"
            android:background="@android:color/darker_gray"
            android:layout_marginBottom="15dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_point"
            android:fontFamily="sans-serif"
            android:text="@string/upc_a"
            android:drawablePadding="8dp"
            android:drawableStart="@drawable/ic_point"
            android:paddingLeft="20dp"
            android:paddingStart="20dp"
            tools:ignore="RtlSymmetry"
            android:textColor="#000"
            android:textSize="12sp"
            android:layout_marginBottom="15dp"
            android:gravity="center_vertical" />
        <View

            android:layout_width="match_parent"
            android:layout_height="0.2dp"
            android:background="@android:color/darker_gray"
            android:layout_marginBottom="15dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_point"
            android:fontFamily="sans-serif"
            android:text="@string/upc_e"
            android:drawablePadding="8dp"
            android:drawableStart="@drawable/ic_point"
            android:paddingLeft="20dp"
            android:paddingStart="20dp"
            tools:ignore="RtlSymmetry"
            android:textColor="#000"
            android:textSize="12sp"
            android:layout_marginBottom="15dp"
            android:gravity="center_vertical" />
        <View

            android:layout_width="match_parent"
            android:layout_height="0.2dp"
            android:background="@android:color/darker_gray"
            android:layout_marginBottom="15dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_point"
            android:fontFamily="sans-serif"
            android:text="@string/aztec"
            android:drawablePadding="8dp"
            android:drawableStart="@drawable/ic_point"
            android:paddingLeft="20dp"
            android:paddingStart="20dp"
            tools:ignore="RtlSymmetry"
            android:textColor="#000"
            android:textSize="12sp"
            android:layout_marginBottom="15dp"
            android:gravity="center_vertical" />
        <View

            android:layout_width="match_parent"
            android:layout_height="0.2dp"
            android:background="@android:color/darker_gray"
            android:layout_marginBottom="15dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_point"
            android:fontFamily="sans-serif"
            android:text="@string/codabar"
            android:drawablePadding="8dp"
            android:drawableStart="@drawable/ic_point"
            android:paddingLeft="20dp"
            android:paddingStart="20dp"
            tools:ignore="RtlSymmetry"
            android:textColor="#000"
            android:textSize="12sp"
            android:layout_marginBottom="15dp"
            android:gravity="center_vertical" />
        <View

            android:layout_width="match_parent"
            android:layout_height="0.2dp"
            android:background="@android:color/darker_gray"
            android:layout_marginBottom="15dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_point"
            android:fontFamily="sans-serif"
            android:text="@string/code_39"
            android:drawablePadding="8dp"
            android:drawableStart="@drawable/ic_point"
            android:paddingLeft="20dp"
            android:paddingStart="20dp"
            tools:ignore="RtlSymmetry"
            android:textColor="#000"
            android:textSize="12sp"
            android:layout_marginBottom="15dp"
            android:gravity="center_vertical" />
        <View

            android:layout_width="match_parent"
            android:layout_height="0.2dp"
            android:background="@android:color/darker_gray"
            android:layout_marginBottom="15dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_point"
            android:fontFamily="sans-serif"
            android:text="@string/code_93"
            android:drawablePadding="8dp"
            android:drawableStart="@drawable/ic_point"
            android:paddingLeft="20dp"
            android:paddingStart="20dp"
            tools:ignore="RtlSymmetry"
            android:textColor="#000"
            android:textSize="12sp"
            android:layout_marginBottom="15dp"
            android:gravity="center_vertical" />
        <View

            android:layout_width="match_parent"
            android:layout_height="0.2dp"
            android:background="@android:color/darker_gray"
            android:layout_marginBottom="15dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_point"
            android:fontFamily="sans-serif"
            android:text="@string/code_128"
            android:drawablePadding="8dp"
            android:drawableStart="@drawable/ic_point"
            android:paddingLeft="20dp"
            android:paddingStart="20dp"
            tools:ignore="RtlSymmetry"
            android:textColor="#000"
            android:textSize="12sp"
            android:layout_marginBottom="15dp"
            android:gravity="center_vertical" />
        <View

            android:layout_width="match_parent"
            android:layout_height="0.2dp"
            android:background="@android:color/darker_gray"
            android:layout_marginBottom="15dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_point"
            android:fontFamily="sans-serif"
            android:text="@string/data_matrix"
            android:drawablePadding="8dp"
            android:drawableStart="@drawable/ic_point"
            android:paddingLeft="20dp"
            android:paddingStart="20dp"
            tools:ignore="RtlSymmetry"
            android:textColor="#000"
            android:textSize="12sp"
            android:layout_marginBottom="15dp"
            android:gravity="center_vertical" />
        <View

            android:layout_width="match_parent"
            android:layout_height="0.2dp"
            android:background="@android:color/darker_gray"
            android:layout_marginBottom="15dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_point"
            android:fontFamily="sans-serif"
            android:text="@string/ean_8"
            android:drawablePadding="8dp"
            android:drawableStart="@drawable/ic_point"
            android:paddingLeft="20dp"
            android:paddingStart="20dp"
            tools:ignore="RtlSymmetry"
            android:textColor="#000"
            android:textSize="12sp"
            android:layout_marginBottom="15dp"
            android:gravity="center_vertical" />
        <View

            android:layout_width="match_parent"
            android:layout_height="0.2dp"
            android:background="@android:color/darker_gray"
            android:layout_marginBottom="15dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_point"
            android:fontFamily="sans-serif"
            android:text="@string/ean_13"
            android:drawablePadding="8dp"
            android:drawableStart="@drawable/ic_point"
            android:paddingLeft="20dp"
            android:paddingStart="20dp"
            tools:ignore="RtlSymmetry"
            android:textColor="#000"
            android:textSize="12sp"
            android:layout_marginBottom="15dp"
            android:gravity="center_vertical" />
        <View

            android:layout_width="match_parent"
            android:layout_height="0.2dp"
            android:background="@android:color/darker_gray"
            android:layout_marginBottom="15dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_point"
            android:fontFamily="sans-serif"
            android:text="@string/itf"
            android:drawablePadding="8dp"
            android:drawableStart="@drawable/ic_point"
            android:paddingLeft="20dp"
            android:paddingStart="20dp"
            tools:ignore="RtlSymmetry"
            android:textColor="#000"
            android:textSize="12sp"
            android:layout_marginBottom="15dp"
            android:gravity="center_vertical" />
        <View

            android:layout_width="match_parent"
            android:layout_height="0.2dp"
            android:background="@android:color/darker_gray"
            android:layout_marginBottom="15dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_point"
            android:fontFamily="sans-serif"
            android:text="@string/maxicode"
            android:drawablePadding="8dp"
            android:drawableStart="@drawable/ic_point"
            android:paddingLeft="20dp"
            android:paddingStart="20dp"
            tools:ignore="RtlSymmetry"
            android:textColor="#000"
            android:textSize="12sp"
            android:layout_marginBottom="15dp"
            android:gravity="center_vertical" />
        <View

            android:layout_width="match_parent"
            android:layout_height="0.2dp"
            android:background="@android:color/darker_gray"
            android:layout_marginBottom="15dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_point"
            android:fontFamily="sans-serif"
            android:text="@string/pdf_417"
            android:drawablePadding="8dp"
            android:drawableStart="@drawable/ic_point"
            android:paddingLeft="20dp"
            android:paddingStart="20dp"
            tools:ignore="RtlSymmetry"
            android:textColor="#000"
            android:textSize="12sp"
            android:layout_marginBottom="15dp"
            android:gravity="center_vertical" />
        <View

            android:layout_width="match_parent"
            android:layout_height="0.2dp"
            android:background="@android:color/darker_gray"
            android:layout_marginBottom="15dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:drawableTop="@drawable/ic_bd32"
            android:text="@string/made_in_bangladesh"
            android:textAlignment="center"
            android:textColor="#000"
            android:fontFamily="sans-serif-thin"
            android:textSize="13sp"
            android:gravity="center_vertical"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"/>
    </LinearLayout>
</ScrollView>